Added title, description, and link to ERAU connection

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+
+title: TechEagles
+description: TechEagles is Embry-Riddle's student organization responsible for organizing the HackRiddle event and sending students to hackathons across the United States, while building community and interest in software and technology on campus.
+connection_url: https://connection.erau.edu/organization/techeagles
